--- a/app/views/wishlists/_accessibility.html.erb
+++ b/app/views/wishlists/_accessibility.html.erb
@@ -1,4 +1,4 @@
-<% form_for @wishlist, :html => {:class => 'ajax_form', :id => 'change_wishlist_accessibility'} do |f| %>
+<%= form_for @wishlist, :html => {:class => 'ajax_form', :id => 'change_wishlist_accessibility'} do |f| %>
   <%= f.radio_button :is_private, true %>&nbsp;<%= t(:private) %>
   <%= f.radio_button :is_private, false %>&nbsp;<%= t(:public) %>
 <% end -%>
